Fri Jul  4 02:56:04 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#query=): remove validation, just
	  escape. [Feature #2542]

	* lib/uri/generic.rb (URI::Generic#fragment=): ditto.

	* lib/uri/generic.rb (URI::Generic#check_query): removed.

	* lib/uri/generic.rb (URI::Generic#set_query): ditto.

	* lib/uri/generic.rb (URI::Generic#check_fragment): ditto.

	* lib/uri/generic.rb (URI::Generic#set_fragment): ditto.

Thu Jul  3 12:40:22 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-static-linked-ext): fix for extensions to
	  be linked statically.

	* Makefile.in, common.mk: use ENCSTATIC for enc directory.

	* ext/extmk.rb: supply dependencies of statically linked extension
	  libraries.

Wed Jul  2 15:45:49 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_heap_lazy_sweep): simplify logic.

	* gc.c (gc_page_sweep): return TRUE if empty slots are available.

Wed Jul  2 09:48:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* logger.rb: removed unmaintained code.
	  [Feature #9860][ruby-core:62724]
	* test/logger/test_application.rb: ditto.

Wed Jul  2 03:20:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* node.c (dump_node): handle nd_value == (NODE *)-1 to mean this
	  keyword argument is required

Wed Jul  2 02:57:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_env_local_variables): returns array of local
	  variable name symbols in the environment by envval.

	* proc.c (bind_local_variables): use rb_vm_env_local_variables.

Wed Jul  2 02:23:52 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bind_receiver): new method to return the bound receiver
	  of the binding object.  [ruby-dev:47613] [Feature #8779]

Wed Jul  2 02:14:37 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bind_local_variables): update env from envval for each
	  iterations.  [ruby-dev:48351] [Bug #10001]

Tue Jul  1 23:46:34 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
